[package]
name = "clioptions"
description = "A very thin wrapper for command line arguments in Rust."
readme = "README.md"
repository = "https://github.com/stpettersens/clioptions"
homepage = "https://github.com/stpettersens/clioptions"
documentation = "https://stpettersens.github.io/clioptions/doc/clioptions"
license = "MIT"
version = "0.1.0"
authors = ["Sam Saint-Pettersen <s.stpettersen+github@gmail.com>"]
keywords = ["cli", "options", "thin", "wrapper", "arguments"]
exclude = [".gitignore", ".travis.yml", "appveyor.yml"]
